--- a/lic-6/lic-6.vcxproj.filters
+++ b/lic-6/lic-6.vcxproj.filters
@@ -14,4 +14,37 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="d_except.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="heapV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="d_matrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="graph1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="graph2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="graph3.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="graph4.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="graph.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
